err/strippers.facebook.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MultipartPostHandler-0.1.0.egg-info'...
Compiling './lib/python3.5/site-packages/MultipartPostHandler.py'...
***   File "./lib/python3.5/site-packages/MultipartPostHandler.py", line 70
    raise TypeError, "not a valid non-string sequence or mapping object", traceback
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doc'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strippers'...
Listing './lib/python3.5/site-packages/strippers/facebook'...
Compiling './lib/python3.5/site-packages/strippers/facebook/MultipartPostHandler.py'...
***   File "./lib/python3.5/site-packages/strippers/facebook/MultipartPostHandler.py", line 71
    raise TypeError, "not a valid non-string sequence or mapping object", traceback
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strippers/facebook/graphapi.py'...
***   File "./lib/python3.5/site-packages/strippers/facebook/graphapi.py", line 227
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strippers/facebook/graphobject.py'...
***   File "./lib/python3.5/site-packages/strippers/facebook/graphobject.py", line 77
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/strippers.facebook-0.9b0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
